--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "shortid": "^2.2.15",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
